argocd/applications/ofz/control-plane/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: ofz-api
spec:
  selector:
    app.kubernetes.io/name: ofz-api
  ports:
    - name: grpc
      port: 9443
      targetPort: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ofz-api
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: ofz-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ofz-api
        spiffe.io/spire-managed-identity: 'true'
    spec:
      serviceAccountName: ofz-api
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: ofz-api
      containers:
        - name: ofz-api
          image: registry.ide-newton.ts.net/lab/ofz
          args: [serve]
          ports:
            - name: grpc
              containerPort: 9443
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: '1'
              memory: 512Mi
          startupProbe:
            tcpSocket:
              port: grpc
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            tcpSocket:
              port: grpc
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: grpc
            periodSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: workload-api
              mountPath: /spiffe-workload-api
              readOnly: true
            - name: database
              mountPath: /var/run/ofz/database
              readOnly: true
            - name: database-ca
              mountPath: /var/run/ofz/database-ca
              readOnly: true
            - name: native
              mountPath: /var/run/ofz/native
              readOnly: true
      volumes:
        - name: workload-api
          csi:
            driver: csi.spiffe.io
            readOnly: true
        - name: database
          secret:
            secretName: ofz-api-db-auth
            defaultMode: 0440
        - name: database-ca
          secret:
            secretName: ofz-db-ca
            defaultMode: 0440
        - name: native
          secret:
            secretName: ofz-spicedb-key
            defaultMode: 0440
